# sshping

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  justfile  release.toml  rustfmt.toml
.github/scripts/: setup-sshd.sh
.github/scripts/tests/: test_agent_auth.sh  test_default_key.sh  test_echo.sh  test_file_key.sh  test_speed.sh  test_wrong_password.sh
.github/workflows/: ci.yml  release.yml
recipes/: release.just
src/: auth.rs  cli.rs  client.rs  completer.rs  main.rs  ssh_config_parser.rs  style.rs  summary.rs  tests.rs  util.rs
