[package]
name = "sshping"
version = "0.2.2"
edition = "2021"
description = "SSH-based ping that measures interactive character echo latency and file transfer throughput. Pronounced \"shipping\"."
authors = ["Nan Huang <teddyhuangnan@gmail.com>"]
license = "MIT"
repository = "https://github.com/TeddyHuang-00/sshping"

[features]
default = []

[dependencies]
bytesize = "2.0.0"
clap = { version = "4.5.7", features = [
    "derive",
    "string",
    "cargo",
    "color",
    "wrap_help",
] }
humantime = "2.1.0"
indicatif = "0.18.0"
log = "0.4.21"
num-format = "0.4.4"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shellexpand = "3.1.0"
simple_logger = "5.0.0"
size = "0.5.0"
openssh = "0.11.5"
tabled = "0.20.0"
whoami = "1.5.1"
tokio = { version = "1.47.1", features = ["full"] }
openssh-sftp-client = { version = "0.15.3", features = ["openssh"] }
bytes = "1.10.1"

[build-dependencies]
bytesize = "2.0.0"
clap = { version = "4.5.7", features = [
    "derive",
    "string",
    "cargo",
    "color",
    "wrap_help",
] }
clap_complete = "4.5.44"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shellexpand = "3.1.0"
tabled = "0.20.0"
whoami = "1.5.1"

